--- a/index.html
+++ b/index.html
@@ -136,8 +136,11 @@
             </div>
         </section>
         <!-- features section  -->
-        <section class="grid grid-cols-2 gap-5 px-8 mx-auto my-12">
-            <div class="flex justify-between shadow-lg rounded-xl bg-white space-y-4">
+        <section class="grid lg:grid-cols-2 gap-8 px-8 mx-auto my-12">
+            <div class="first bg-white row-span-3 mb-4">
+                <img class="h-80 mx-auto" src="images/shopping.png" alt="">
+            </div>
+            <div class="flex justify-between shadow-lg rounded-xl bg-white space-y-6">
                 <div>
                     <img class="h-20 mx-auto" src="icons/image 12.png" alt="">
                 </div>
@@ -146,10 +149,10 @@
                     <p class="w-2/3">Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolorem, explicabo.</p>
                 </div>
             </div>
-            <div class="bg-white row-span-3">
+            <!-- <div class="first bg-white row-span-3">
                 <img class="h-80 mx-auto" src="images/shopping.png" alt="">
-            </div>
-            <div class="flex justify-between shadow-lg rounded-xl bg-white space-y-4">
+            </div> -->
+            <div class="flex justify-between shadow-lg rounded-xl bg-white space-y-6">
                 <div>
                     <img class="h-20 mx-auto" src="icons/image 13.png" alt="">
                 </div>
@@ -158,7 +161,7 @@
                     <p class="w-2/3">Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolorem, explicabo.</p>
                 </div>
             </div>
-            <div class="flex justify-between shadow-lg rounded-xl bg-white space-y-4">
+            <div class="flex justify-between shadow-lg rounded-xl bg-white space-y-6">
                 <div>
                     <img class="h-20 mx-auto" src="icons/image 14.png" alt="">
                 </div>
